# NN-GUI-rs

./: Cargo.toml  LICENSE  README.md
nn/: Cargo.toml
nn-bins/: Cargo.toml
nn-bins/src/: handwritten_recognition.rs  nn.rs  nn_data_scaler.rs  nn_image.rs  nn_mnist_train_part_one.rs  nn_mnist_train_part_two.rs  nn_mnist_train_part_zero.rs
nn/src/: lib.rs
