[package]
name = "nn"
version = "0.1.0"
edition = "2021"
authors = ["MathxH Chen <brainfvck@foxmail.com>"]
description = "A simple neural network library written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
ndarray = "0.15.6"
ndarray-rand = "0.14.0"